@@ -18,6 +18,7 @@ hs_err_pid*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
+.idea/artifacts
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
 
